<resources>
    <string name="app_name">Just Java</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="summary">Summary</string>
    <string name="update_summary">Update Summary</string>
    <string name="order">Order</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="max_coffee">No more coffee for you!.</string>
    <string name="min_coffee">You can order minimum 1 Coffee.</string>
    <string name="order_summary_name">Name: </string>
    <string name="order_summary_quantity">\nQuantity: </string>
    <string name="order_summary_per_coffee">\nPrice per Coffee: </string>
    <string name="order_summary_whipped_cream">\nWhipped cream added. (₹5 each)</string>
    <string name="order_summary_chocolate">\nChocolate added. (₹10 each)</string>
    <string name="order_summary_total_bill">\nTotal bill: </string>
    <string name="order_summary_thank_you">\nThank you.</string>
    <string name="email_summary_that_will_be">Your Order has been placed.\nThat will be ₹</string>
    <string name="email_summary_app_credits">Coffee order using Just Java app</string>
</resources>
